--- a/src/components/Expenses/Expenses.css
+++ b/src/components/Expenses/Expenses.css
@@ -1,6 +1,6 @@
 .expenses {
-	width: 100%;
-	max-width: 700px;
+	width: 50rem;
+	max-width: 95%;
 	margin: 50px auto;
 	padding: 30px 20px;
 	background: black;
